force-app/main/default/objects/Error_Log__c/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <description>This field will store the source of error from where the error has invoked.</description>
    <label>Error Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Lightning Component</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>