force-app/main/default/objects/Error_Log__c/fields/Flow_User__c.field-meta.xml
<CustomField>
    <fullName>Flow_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>