force-app/main/default/objects/Error_Log__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <description>This field will store the governor limit details</description>
    <label>Limits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>