force-app/main/default/objects/Error_Log__c/fields/Line_number__c.field-meta.xml
<CustomField>
    <fullName>Line_number__c</fullName>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>