force-app/main/default/objects/Error_Log__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>EXECUTE</fullName>
            </value>
            <value>
                <fullName>FINISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>