force-app/main/default/objects/Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>This field will store the salesforce Id of the impacted record.</description>
    <label>Record Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>